[gd_scene load_steps=6 format=3 uid="uid://41c7l8jynfsv"]

[ext_resource type="Script" path="res://scenes/scene_2d/2d_test.gd" id="1_b3tb6"]
[ext_resource type="Script" path="res://scenes/scene_2d/camera_2d.gd" id="1_tt0a0"]
[ext_resource type="TileSet" uid="uid://dt27fvaeaksuh" path="res://resources/tile_set/magecity_tile_set.tres" id="2_asdvs"]
[ext_resource type="Shortcut" uid="uid://ck38hryheyrjn" path="res://resources/shortcut/back_shortcut.tres" id="4_ksx2g"]
[ext_resource type="StyleBox" uid="uid://v1pgvqqrkx1m" path="res://resources/theme/style_box_flat/black_panel.tres" id="5_xn612"]

[node name="2DTest" type="Node2D"]
script = ExtResource("1_b3tb6")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_asdvs")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 1, 0, 393216, 1, 0, 458752, 1, 0, 524288, 1, 0, 589824, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 589843, 1, 0, 524307, 1, 0, 458771, 1, 0, 393235, 1, 0, 327699, 1, 0, 262163, 1, 0, 196627, 1, 0, 131091, 1, 0, 65555, 1, 0, 262150, 196609, 34, 196614, 196609, 33, 131078, 1, 0, 65542, 1, 0, 65541, 1, 0, 65540, 1, 0, 65539, 1, 0, 65538, 1, 0, 65537, 1, 0, 131073, 1, 0, 196609, 1, 0, 262145, 1, 0, 327681, 1, 0, 393217, 1, 0, 458753, 1, 0, 524289, 1, 0, 589825, 1, 0, 589826, 1, 0, 524290, 1, 0, 458754, 1, 0, 393218, 131073, 34, 327682, 1, 0, 262146, 1, 0, 196610, 1, 0, 131074, 1, 0, 131075, 1, 0, 196611, 1, 0, 262147, 131073, 34, 327683, 131073, 34, 393219, 131073, 34, 458755, 131073, 34, 524291, 1, 0, 589827, 1, 0, 589828, 1, 0, 524292, 262145, 34, 458756, 196609, 34, 393220, 196609, 34, 327684, 262145, 34, 262148, 131073, 33, 196612, 131073, 34, 131076, 1, 0, 131077, 1, 0, 196613, 131073, 33, 262149, 1, 33, 327685, 1, 33, 393221, 196609, 34, 458757, 262145, 34, 524293, 262145, 34, 589829, 1, 0, 589830, 1, 0, 524294, 1, 34, 458758, 1, 11, 393222, 1, 10, 327686, 1, 9, 327687, 65537, 9, 262151, 262145, 34, 196615, 196609, 33, 131079, 1, 0, 65543, 1, 0, 65544, 1, 0, 131080, 1, 0, 196616, 196609, 33, 262152, 196609, 34, 327688, 65537, 9, 393224, 65537, 10, 393223, 65537, 10, 458759, 65537, 11, 524295, 1, 0, 589831, 1, 0, 589832, 1, 0, 524296, 65537, 34, 458760, 65537, 11, 458761, 65537, 11, 393225, 65537, 10, 327689, 65537, 9, 262153, 196609, 34, 196617, 196609, 33, 131081, 1, 0, 65545, 1, 0, 65546, 1, 0, 131082, 1, 0, 196618, 196609, 33, 262154, 65537, 33, 327690, 65537, 9, 393226, 65537, 10, 458762, 65537, 11, 524298, 65537, 34, 524297, 262145, 35, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 524299, 65537, 34, 458763, 65537, 11, 393227, 65537, 10, 327691, 65537, 9, 262155, 196609, 34, 196619, 196609, 33, 131083, 1, 0, 65547, 1, 0, 65548, 1, 0, 131084, 1, 0, 196620, 65537, 33, 262156, 196609, 34, 327692, 65537, 9, 393228, 65537, 10, 458764, 65537, 11, 524300, 327681, 35, 589836, 1, 0, 589837, 1, 0, 524301, 327681, 35, 458765, 131073, 11, 393229, 131073, 10, 327693, 131073, 9, 262157, 262145, 34, 196621, 65537, 33, 131085, 1, 0, 65549, 1, 0, 65550, 1, 0, 131086, 1, 0, 196622, 196609, 33, 262158, 196609, 34, 327694, 196609, 34, 393230, 262145, 34, 458766, 262145, 34, 524302, 327681, 35, 589838, 1, 0, 589839, 1, 0, 524303, 1, 0, 458767, 327681, 35, 393231, 327681, 35, 327695, 1, 0, 262159, 262145, 34, 196623, 262145, 34, 131087, 1, 0, 65551, 1, 0, 65552, 1, 0, 131088, 1, 0, 196624, 327681, 34, 262160, 327681, 34, 327696, 1, 0, 393232, 1, 0, 458768, 1, 0, 524304, 1, 0, 589840, 1, 0, 589841, 1, 0, 524305, 1, 0, 458769, 1, 0, 393233, 1, 0, 327697, 1, 0, 262161, 1, 0, 196625, 1, 0, 131089, 1, 0, 65553, 1, 0, 65554, 1, 0, 131090, 1, 0, 196626, 1, 0, 262162, 1, 0, 327698, 1, 0, 393234, 1, 0, 458770, 1, 0, 524306, 1, 0, 589842, 1, 0)
layer_1/name = "objects"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/navigation_enabled = true
layer_1/tile_data = PackedInt32Array(65539, 131073, 15, 131075, 131073, 16, 196611, 131073, 17, 262147, 131073, 18, 65540, 196609, 15, 131076, 196609, 16, 196612, 196609, 17, 262148, 196609, 18, 131087, 262145, 14, 196623, 262145, 15, 262159, 262145, 16, 131088, 327681, 14, 196624, 327681, 15, 262160, 327681, 16, 327696, 327681, 17, 393232, 327681, 18, 131089, 393217, 14, 196625, 393217, 15, 262161, 393217, 16, 327697, 393217, 17, 393233, 393217, 18, 131090, 458753, 14, 196626, 458753, 15, 262162, 458753, 16, 327698, 131073, 1, 393234, 458753, 18, 131081, 65537, 13, 196617, 65537, 14, 131085, 65537, 13, 196621, 65537, 14, 524300, 131073, 12, 589836, 131073, 13, 655372, 131073, 14, 458769, 1, 12, 524305, 1, 13, 589841, 1, 14, 327682, 1, 12, 393218, 1, 13, 458754, 1, 14, 6, 1, 12, 65542, 1, 13, 131078, 1, 14, 524295, 1, 12, 589831, 1, 13, 655367, 1, 14, 589828, 131073, 1, 131073, 131073, 1, 65548, 131073, 1, 589839, 131073, 1, 589842, 131073, 1, 327694, 262145, 0, 327687, 327681, 2, 393223, 327681, 3, 327692, 327681, 2, 393228, 327681, 3)

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("1_tt0a0")

[node name="Menu" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Back" type="Button" parent="Menu/MarginContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
shortcut = ExtResource("4_ksx2g")
text = "Back"

[node name="Controls" type="RichTextLabel" parent="Menu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("5_xn612")
bbcode_enabled = true
text = "[right][b]Controls[/b]
Arrow keys to move.
Mouse wheel to change camera speed.
Keys 1-4 to change camera zoom."
fit_content = true
autowrap_mode = 0

[node name="CameraInfo" type="RichTextLabel" parent="Menu/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("5_xn612")
text = "test
test"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Label" type="Label" parent="Menu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "2D Test"

[connection signal="camera_info_changed" from="Camera2D" to="." method="_on_camera_2d_camera_info_changed"]
[connection signal="pressed" from="Menu/MarginContainer/Back" to="." method="_on_back_pressed"]
